# DREDGE-Cli

./: .dockerignore  .dredge.json.example  .env.container.example  .env.example  .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  ABOUT_DREDGE_NANOGPT.md  BENCHMARK_USAGE.md  BUILD.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMAND_TREE.md  CONFIG_SCHEMA.md  CONTAINER_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DOCKER_WORKFLOW_METHODOLOGY.md  DOWNLOAD_INSTRUCTIONS.md  DREDGE_MVP.swift  Dockerfile  EXPERIMENTATION_GUIDE.md  EXTENDED_BENCHMARK_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS.md  PR59_VERIFICATION_REPORT.md  Package.swift  QUICKSTART.md  README.docx  README.md  REPOSITORY_ORGANIZATION.md  REPOSITORY_STATUS.md  RESUME_CONTENT.md  SWIFT_PACKAGE_GUIDE.md  SharedStore.swift  docker-compose.enhanced.yml  (+10 more)
.build/: build.db  plugin-tools.yaml
.devcontainer/: README.md  devcontainer.json
.github/: DEPENDADREDGEABOT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  quasimoto_research.md
.github/PULL_REQUEST_TEMPLATE/: dependadredgeabot.md
DREDGE-Cli.xcworkspace/: contents.xcworkspacedata
Sources/: main.swift
benchmarks/: README.md  benchmark_demo.py  migrate_quasimoto.sh  quasimoto_benchmark.py  quasimoto_interference_benchmark.py
csrc/: fused_wave.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.txt  CONTAINER_ARCHITECTURE.md  CONTAINER_QUICKSTART.md  DEPLOYMENT_GUIDE.md  DollyIntegration.md  GITHUB_ACTIONS_CONTAINERS.md  GITHUB_MCP_INTEGRATION.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  LATEX_README.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PLATFORM_COMPATIBILITY.md  QUASIMOTO_6D_README.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  mobile-optimization.md  uhios-dredge-integration.md  uhios-implementation-summary.md
dredge-x-dolly/: README.md
k8s/: README.md  configmap.yaml  dredge-server.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  quasimoto-mcp.yaml  redis.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: test-containers.sh
swift/: Package.swift  README.md  SharedStore.swift
tests/: test_cli.py  test_cli_commands.py  test_config_feature.py  test_github_event_handler.py  test_integration.py  test_mcp_server.py  test_performance.py  test_phase3_features.py  test_print_command.py  test_server.py  test_string_theory.py
uh-ios-app/: Package.swift
uhios-whitepaper-package/: Makefile  README-whitepaper.md  README.md  SUBMISSION_GUIDE.md  uhios-whitepaper.tex
(+144 files in other folders)
