[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dredge"
version = "0.1.0"
description = "DREDGE: A lightweight system for lifting, preserving, and releasing insights"
readme = "README.md"
# Python version constraint as specified in requirements
# Note: Can be updated to include newer Python versions as they are tested
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "QueenFi703"}
]
keywords = ["dredge", "insights", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
dredge = "dredge.cli:main"

[project.urls]
Homepage = "https://github.com/QueenFi703/DREDGE"
Repository = "https://github.com/QueenFi703/DREDGE"

[tool.setuptools.packages.find]
where = ["src"]
