[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dredge"
version = "0.1.0"
description = "DREDGE — A small Python utility (scaffold)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "QueenFi703" }]
requires-python = ">=3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
dredge = "dredge.cli:main"

[project.urls]
Homepage = "https://github.com/QueenFi703/DREDGE"
